--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body{
     }
 
     .navbar .navbar-nav {
-        margin-top: 75px;
+        margin-top: 12px;
         border-top: 1px solid #EEEEEE;
     }
 }
@@ -195,6 +195,13 @@ body{
 }
 
 @media (max-width: 768px) {
+    #hide_nav{
+        top: 28px !important;
+    }
+    #menu-logo {
+        position: relative !important;
+        width: 4vh !important;
+    }
     #header-carousel .carousel-item {   
         position: relative;
         min-height: 450px;
@@ -203,7 +210,7 @@ body{
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
         object-fit: cover;
     }
     .set-side {
